Implemented primitive version of BFS-analysis